--- a/New folder (5)/style.css
+++ b/New folder (5)/style.css
@@ -35,7 +35,7 @@ li {
     margin-top: -35px;
 } 
 
-.btn-lg2{
+.btn-1{
     height: 68px;
     width: 249px;
     background-color: white;
@@ -51,10 +51,10 @@ li {
     color: black;
 }
 
-.btn-outline-success:hover {
-    background-color: #F6F6F6;
+.btn-1:hover {
+    background-color: black;
+    color: white;
 }
-
 .h1{
     margin-top: 100px;
 }
